<resources>
    <string name="app_name">COVID-19 Info Tracker</string>
    <string name="source">Source:</string>
    <string name="read_more">Read More…</string>
    <string name="title">Title:</string>
    <string name="retry">Retry</string>
    <string name="no_results_found">No results found</string>
    <string name="error_info">Results could not be loaded</string>
    <string name="description">Description:</string>
    <string name="publishedat">PublishedAt:</string>
    <string name="author">Author:</string>
    <string name="read_article">Read Article..</string>
    <string name="today_confirmed">Today Confirmed</string>
    <string name="today_deaths">Today Deaths:</string>
    <string name="today_open_cases">Today Open Cases:</string>
    <string name="today_recovered">Today Recovered:</string>
    <string name="show_articles">Show Articles…</string>
    <string name="covid_19_info_tracker">COVID-19 \nInfo \nTracker</string>
</resources>