<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.map.view.CovidInfoDialog">

    <data>

        <variable
            name="country"
            type="String" />

        <variable
            name="covidRelatedInfo"
            type="com.example.covid_19infotracker.data.model.CoronaTrackingData.TrackedInfo" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvCountryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@{country}"
            android:textSize="22sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="TextView" />

        <TextView
            android:id="@+id/tv_today_confirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:text="@string/today_confirmed"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCountryName" />

        <TextView
            android:id="@+id/tv_today_deaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/today_deaths"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_today_confirmed"
            app:layout_constraintTop_toBottomOf="@+id/tv_today_confirmed" />

        <TextView
            android:id="@+id/tv_today_open_cases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/today_open_cases"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_today_deaths"
            app:layout_constraintTop_toBottomOf="@+id/tv_today_deaths" />

        <TextView
            android:id="@+id/tv_today_recovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/today_recovered"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_today_open_cases"
            app:layout_constraintTop_toBottomOf="@+id/tv_today_open_cases" />

        <TextView
            android:id="@+id/tv_today_confirmed_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@{Integer.toString(covidRelatedInfo.today_confirmed)}"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/tv_today_confirmed"
            app:layout_constraintTop_toTopOf="@+id/tv_today_confirmed"
            tools:text="TextView" />

        <TextView
            android:id="@+id/tv_today_deaths_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@{Integer.toString(covidRelatedInfo.today_deaths)}"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_today_deaths"
            app:layout_constraintStart_toEndOf="@+id/tv_today_deaths"
            app:layout_constraintTop_toTopOf="@+id/tv_today_deaths"
            tools:text="TextView" />

        <TextView
            android:id="@+id/tv_today_open_cases_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@{Integer.toString(covidRelatedInfo.today_open_cases)}"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_today_open_cases"
            app:layout_constraintStart_toEndOf="@+id/tv_today_open_cases"
            app:layout_constraintTop_toTopOf="@+id/tv_today_open_cases"
            tools:text="TextView" />

        <TextView
            android:id="@+id/tv_today_recovered_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@{Integer.toString(covidRelatedInfo.today_recovered)}"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_today_recovered"
            app:layout_constraintStart_toEndOf="@+id/tv_today_recovered"
            app:layout_constraintTop_toBottomOf="@+id/tv_today_open_cases_num"
            tools:text="TextView" />

        <TextView
            android:id="@+id/tvShowArticles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="20dp"
            android:text="@string/show_articles"
            android:textColor="@color/purple_500"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="invisible"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_today_recovered"
            app:layout_constraintTop_toBottomOf="@+id/tv_today_recovered" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>