<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.details.view.ArticleFragment">

    <data>

        <variable
            name="currentArticle"
            type="com.example.covid_19infotracker.data.model.News.Article" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_article_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvArticleImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:elevation="10dp"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/ivArticalLogo"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:scaleType="centerCrop"
                        tools:srcCompat="@tools:sample/avatars" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvSourceLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/source"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cvArticleImg" />

                <TextView
                    android:id="@+id/tvAuthorLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/author"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tvSourceLabel"
                    app:layout_constraintTop_toBottomOf="@+id/tvSourceLabel" />

                <TextView
                    android:id="@+id/tvTitleLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tvAuthorLabel"
                    app:layout_constraintTop_toBottomOf="@+id/tvAuthorLabel" />


                <TextView
                    android:id="@+id/tvPublishedAtLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/publishedat"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tvTitleLabel"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitleLabel" />

                <TextView
                    android:id="@+id/tvDescriptionLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/description"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tvPublishedAtLabel"
                    app:layout_constraintTop_toBottomOf="@+id/tvPublishedAtLabel" />

                <TextView
                    android:id="@+id/tvReadArticle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/read_article"
                    android:textColor="#3A2BFF"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tvDescriptionLabel"
                    app:layout_constraintTop_toBottomOf="@+id/tvDescriptionLabel" />

                <TextView
                    android:id="@+id/tvSource"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="10dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@{currentArticle.source.name}"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toEndOf="@+id/tvSourceLabel"
                    app:layout_constraintTop_toTopOf="@+id/tvSourceLabel"
                    tools:text="textView" />

                <TextView
                    android:id="@+id/tvAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@{currentArticle.author}"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="@+id/tvSource"
                    app:layout_constraintTop_toTopOf="@+id/tvAuthorLabel"
                    tools:text="TextView" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@{currentArticle.title}"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="@+id/tvAuthor"
                    app:layout_constraintTop_toBottomOf="@+id/tvAuthor"
                    tools:text="TextView" />

                <TextView
                    android:id="@+id/tvPublishedAt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@{currentArticle.publishedAt}"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toEndOf="@+id/tvPublishedAtLabel"
                    app:layout_constraintTop_toTopOf="@+id/tvPublishedAtLabel"
                    tools:text="TextView" />

                <TextView
                    android:id="@+id/tvDesc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@{currentArticle.description}"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toEndOf="@+id/tvDescriptionLabel"
                    app:layout_constraintTop_toTopOf="@+id/tvDescriptionLabel"
                    tools:text="TextView" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

       <!-- <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />-->

    </FrameLayout>

</layout>